Update MovieDaoImpl.java